--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Fomesafen/Fomesafen_Absolute ED/MIs_Fome Only_GH_All Pops_ DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Fomesafen/Fomesafen_Absolute ED/MIs_Fome Only_GH_All Pops_ DR Biomass.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Waterhemp MIs GH Atrazine Biomass"
+title: "Waterhemp MIs GH Fomesafen Biomass"
 author: "Felipe Faleco"
 date: "09/08/2023"
 output:
@@ -27,19 +27,19 @@ library(dplyr)
 
 ```{r}
 
-data <- read.csv("Data Sheet_Atrazine_GH.csv")
+data <- read.csv("Data Sheet_Fomesafen_GH.csv")
 
 str(data)
 
 
-data_atra <- data %>% filter(herb == "atra")
+data_fome <- data %>% filter(herb == "fome")
 
 
 fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.atra <- summaryBy(cbind(biomass) ~ pop + rate, data = subset(data_atra),
+summary.fome <- summaryBy(cbind(biomass) ~ pop + rate, data = subset(data_fome),
           FUN=fun)
 
 
@@ -51,7 +51,7 @@ summary.atra <- summaryBy(cbind(biomass) ~ pop + rate, data = subset(data_atra),
 
 ```{r}
 
-model.LL4 <- drm(biomass ~ rate, pop, fct = LL.4(), data = data_atra, type = "continuous")
+model.LL4 <- drm(biomass ~ rate, pop, fct = LL.4(), data = data_fome, type = "continuous")
 
 
 plot(fitted(model.LL4), residuals(model.LL4))
@@ -86,19 +86,19 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), L
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.W2.3 <- drm(biomass ~ rate, pop, fct = W2.3(),  data = data_atra, type = "continuous")
+model.W1.3 <- drm(biomass ~ rate, pop, fct = W1.3(),  data = data_fome, type = "continuous")
 
-plot(fitted(model.W2.3), residuals(model.W2.3))
+plot(fitted(model.W1.3), residuals(model.W1.3))
 
-qqnorm(residuals(model.W2.3))
-
-
-modelFit(model.W2.3)
-
-summary(model.W2.3)
+qqnorm(residuals(model.W1.3))
 
 
-anova(model.W2.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+modelFit(model.W1.3)
+
+summary(model.W1.3)
+
+
+anova(model.W1.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -111,13 +111,13 @@ anova(model.W2.3, model.LL4) # p-value > 0.05 means that there is no difference 
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.A82 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[5, 1] * 0.5), clevel = "A82", type = "absolute", interval = "delta")
+ED50.A82 <- ED(model.W1.3, (summary(model.W1.3)$coefficients[5, 1] * 0.5), clevel = "A82", type = "absolute", interval = "delta")
 
-ED50.A101 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[6, 1] * 0.5), clevel = "A101", type = "absolute", interval = "delta")
+ED50.A101 <- ED(model.W1.3, (summary(model.W1.3)$coefficients[6, 1] * 0.5), clevel = "A101", type = "absolute", interval = "delta")
 
-ED50.A103 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[7, 1] * 0.5), clevel = "A103", type = "absolute", interval = "delta")
+ED50.A103 <- ED(model.W1.3, (summary(model.W1.3)$coefficients[7, 1] * 0.5), clevel = "A103", type = "absolute", interval = "delta")
 
-ED50.A75 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[8, 1] * 0.5), clevel = "A75", type = "absolute", interval = "delta")
+ED50.A75 <- ED(model.W1.3, (summary(model.W1.3)$coefficients[8, 1] * 0.5), clevel = "A75", type = "absolute", interval = "delta")
 
 
 # If the model was a Log-logistic (log(ED50) as parameter) E.g.: LL2.3,  we should use logBase = exp(1). Eg: ED50.A82 <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[5, 1] * 0.5), clevel = "A82", type = "absolute", interval = "delta", logBase = exp(1))
@@ -132,18 +132,18 @@ ED50.A75 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[8, 1] * 0.5), cleve
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
 
-EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[6, 1] * 0.5),
-                     (summary(model.W2.3)$coefficients[5, 1] * 0.5)), 
+EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[6, 1] * 0.5),
+                     (summary(model.W1.3)$coefficients[5, 1] * 0.5)), 
        compMatch = c("A101", "A82"), type = "absolute", interval = "none", reverse = F)
 
 
-EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[7, 1] * 0.5),
-                     (summary(model.W2.3)$coefficients[5, 1] * 0.5)), 
+EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[7, 1] * 0.5),
+                     (summary(model.W1.3)$coefficients[5, 1] * 0.5)), 
        compMatch = c("A103", "A82"), type = "absolute", interval = "none", reverse = F)
 
 
-EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[8, 1] * 0.5),
-                     (summary(model.W2.3)$coefficients[5, 1] * 0.5)), 
+EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[8, 1] * 0.5),
+                     (summary(model.W1.3)$coefficients[5, 1] * 0.5)), 
        compMatch = c("A75", "A82"), type = "absolute", interval = "none", reverse = F)
 
 
@@ -152,15 +152,15 @@ EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[8, 1] * 0.5),
 
 
 # Comparing b parameter (slope)
-compParm(model.W2.3, strVal = "b", operator = "-")
+compParm(model.W1.3, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.W2.3, strVal = "d", operator = "-")
+compParm(model.W1.3, strVal = "d", operator = "-")
 
 
 # Comparing e parameter (Infletion Point)
-compParm(model.W2.3, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
+compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
 
 
 ```
@@ -171,18 +171,18 @@ compParm(model.W2.3, strVal = "e", operator = "-") # Remember that for assymetri
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/2023/Atrazine_Absolute ED/MIs_Atra Only_GH_All Pops_ DR Biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Fomesafen/Fomesafen_Absolute ED/MIs_Fome Only_GH_All Pops_ DR Biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
 
 
-plot(model.W2.3,
+plot(model.W1.3,
      type = "average",
-     xlab = expression(paste("Atrazine rate (g ai ha"^-1, ")")),
+     xlab = expression(paste("Fomesafen rate (g ai ha"^-1, ")")),
      ylab = expression(paste("Biomass (g plant"^-1, ")")),
-     ylim = c(0, 4),
+     ylim = c(0, 5),
      #broken = T,
      col = c("darkgreen", "red", "navy", "orange"),
      pch = c(19, 17, 15, 18),
@@ -199,10 +199,10 @@ points(x = c(ED50.A82[1, 1],
              ED50.A101[1, 1],
              ED50.A103[1, 1],
              ED50.A75[1, 1]),
-       y = c((summary(model.W2.3)$coefficients[5, 1]/2), 
-             (summary(model.W2.3)$coefficients[6, 1]/2),
-             (summary(model.W2.3)$coefficients[7, 1]/2),
-             (summary(model.W2.3)$coefficients[8, 1]/2)),
+       y = c((summary(model.W1.3)$coefficients[5, 1]/2), 
+             (summary(model.W1.3)$coefficients[6, 1]/2),
+             (summary(model.W1.3)$coefficients[7, 1]/2),
+             (summary(model.W1.3)$coefficients[8, 1]/2)),
        pch = 8,
        cex = 1.3)
 
