--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED/MIs_2,4-D Only_GC_A82_ DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED/MIs_2,4-D Only_GC_A82_ DR Biomass.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Waterhemp MIs GC 2,4-D Biomass"
 author: "Felipe Faleco"
-date: "02/22/2023"
+date: "09/11/2023"
 output:
   html_document:
     df_print: paged
@@ -31,7 +31,7 @@ data <- read.csv("Data Sheet_2,4-D_GC.csv")
 str(data)
 
 
-data.A82.24D <- data %>% filter(pop == "A82", herb == "2,4D")
+data.A82.24D <- data %>% filter(pop == "A82")
 
 
 
@@ -86,20 +86,20 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), L
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL2.3 <- drm(biomass ~ rate, temp, fct = LL2.3(), data = data.A82.24D, type = "continuous")
+model.W1.3 <- drm(biomass ~ rate, temp, fct = W1.3(), data = data.A82.24D, type = "continuous")
 
 
-plot(fitted(model.LL2.3), residuals(model.LL2.3))
+plot(fitted(model.W1.3), residuals(model.W1.3))
 
-qqnorm(residuals(model.LL2.3))
+qqnorm(residuals(model.W1.3))
 
                 
-modelFit(model.LL2.3)
+modelFit(model.W1.3)
 
-summary(model.LL2.3) 
+summary(model.W1.3) 
 
 
-anova(model.LL2.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+anova(model.W1.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -112,12 +112,10 @@ anova(model.LL2.3, model.LL4) # p-value > 0.05 means that there is no difference
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.elevated <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[3, 1] * 0.5), clevel = "elevated", type = "absolute", interval = "delta", logBase = exp(1))
+ED50.elevated <- ED(model.W1.3, (summary(model.W1.3)$coefficients[3, 1] * 0.5), clevel = "elevated", type = "absolute", interval = "delta")
 
-ED50.ambient <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[4, 1] * 0.5), clevel = "ambient", type = "absolute", interval = "delta", logBase = exp(1))
+ED50.ambient <- ED(model.W1.3, (summary(model.W1.3)$coefficients[4, 1] * 0.5), clevel = "ambient", type = "absolute", interval = "delta")
 
-
-# In this case, fitting relative and absolute resulted in the same ED50. Perhaps because W1.3 has a lower limit = 0. In simulations using the W1.4, then the relative and absolute ED50 are different. 
 
 ```
 
@@ -129,9 +127,9 @@ ED50.ambient <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[4, 1] * 0.5),
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
 
-EDcomp(model.LL2.3, c((summary(model.LL2.3)$coefficients[4, 1] * 0.5),
-                     (summary(model.LL2.3)$coefficients[3, 1] * 0.5)), 
-       compMatch = c("elevated", "ambient"), type = "absolute", interval = "none", reverse = F, logBase = exp(1))
+EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
+                     (summary(model.W1.3)$coefficients[3, 1] * 0.5)), 
+       compMatch = c("ambient", "elevated"), type = "absolute", interval = "none", reverse = T)
 
 
 # Here is to compare the difference between the two ED50 instead of ratio. However, comped function does not provide a p-value because it uses the likelihood ratio test instead of t-test. We could still determine if the difference between the two ED50 is different than zero by looking the lower and upper confidence intervals which, if zero is not included, it means that the difference between the two ED50 is different than zero. However, we need to make sure that the confidence intervals are estimated correctly, which is difficult when using a LL2.3 model for example which the model uses the log transformed response variable. In this case, confidence intervals should be estimated using the interval = "fls", but this option is not offered in the comped function.  
@@ -141,15 +139,15 @@ EDcomp(model.LL2.3, c((summary(model.LL2.3)$coefficients[4, 1] * 0.5),
 
 
 # Comparing b parameter (slope)
-compParm(model.LL2.3, strVal = "b", operator = "-")
+compParm(model.W1.3, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.LL2.3, strVal = "d", operator = "-")
+compParm(model.W1.3, strVal = "d", operator = "-")
 
 
 # Comparing e parameter (Infletion Point)
-compParm(model.LL2.3, strVal = "e", operator = "-") # Remember that for asymmetric models, the parameter"e" does not reflect the ED50. 
+compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for asymmetric models, the parameter"e" does not reflect the ED50. 
 
 
 ```
@@ -160,14 +158,14 @@ compParm(model.LL2.3, strVal = "e", operator = "-") # Remember that for asymmetr
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2,4-D_Absolute ED/MIs_2,4-D Only_GC_A82_ DR Biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED/MIs_2,4-D Only_GC_A82_ DR Biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
 
 
-plot(model.LL2.3,
+plot(model.W1.3,
      type = "average",
      xlab = expression(paste("2,4-D rate (g ae ha"^-1, ")")),
      ylab = expression(paste("A82 biomass (g plant"^-1, ")")),
@@ -178,15 +176,15 @@ plot(model.LL2.3,
      cex.axis = 1.3,
      cex.lab = 1.9,
      cex.legend = 2.0,
-     legendPos = c(9000, 4.0),
+     legendPos = c(4000, 4.0),
      lwd = 1.5)
 
 
 
 points(x = c(ED50.elevated[1, 1],
              ED50.ambient[1, 1]),
-       y = c((summary(model.LL2.3)$coefficients[3, 1]/2), 
-             (summary(model.LL2.3)$coefficients[4, 1]/2)),
+       y = c((summary(model.W1.3)$coefficients[3, 1]/2), 
+             (summary(model.W1.3)$coefficients[4, 1]/2)),
        pch = 8,
        cex = 1.3)
 
