--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED/MIs_2,4-D+GST_GC_A101_ DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED/MIs_2,4-D+GST_GC_A101_ DR Biomass.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Waterhemp MIs GC 2,4-D Biomass"
 author: "Felipe Faleco"
-date: "02/22/2023"
+date: "09/11/2023"
 output:
   html_document:
     df_print: paged
@@ -31,7 +31,7 @@ data <- read.csv("Data Sheet_2,4-D_GC.csv")
 str(data)
 
 
-data.A101.24D.P450 <- data %>% filter(pop == "A101", herb == "2,4D+P450")
+data.A101.24D.GST <- data %>% filter(pop == "A101", herb == "2,4D+GST")
 
 
 
@@ -39,7 +39,7 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.A101.24D.P450 <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data.A101.24D.P450),
+summary.A101.24D.GST <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data.A101.24D.GST),
           FUN=fun)
 
 
@@ -51,7 +51,7 @@ summary.A101.24D.P450 <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, da
 
 ```{r}
 
-model.LL4 <- drm(biomass ~ rate, temp, fct = LL.4(), data = data.A101.24D.P450, type = "continuous")
+model.LL4 <- drm(biomass ~ rate, temp, fct = LL.4(), data = data.A101.24D.GST, type = "continuous")
 
 
 plot(fitted(model.LL4), residuals(model.LL4))
@@ -86,19 +86,19 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), L
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.W1.3 <- drm(biomass ~ rate, temp, fct = W1.3(), data = data.A101.24D.P450, type = "continuous")
+model.W2.3 <- drm(biomass ~ rate, temp, fct = W2.3(), data = data.A101.24D.GST, type = "continuous")
 
 
 
-plot(fitted(model.W1.3), residuals(model.W1.3))
+plot(fitted(model.W2.3), residuals(model.W2.3))
 
                 
-modelFit(model.W1.3)
+modelFit(model.W2.3)
 
-summary(model.W1.3) 
+summary(model.W2.3) 
 
 
-anova(model.W1.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+anova(model.W2.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -111,9 +111,9 @@ anova(model.W1.3, model.LL4) # p-value > 0.05 means that there is no difference 
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.elevated <- ED(model.W1.3, (summary(model.W1.3)$coefficients[3, 1] * 0.5), clevel = "elevated", type = "absolute", interval = "delta")
+ED50.elevated <- ED(model.W2.3, (summary(model.W2.3)$coefficients[3, 1] * 0.5), clevel = "elevated", type = "absolute", interval = "delta")
 
-ED50.ambient <- ED(model.W1.3, (summary(model.W1.3)$coefficients[4, 1] * 0.5), clevel = "ambient", type = "absolute", interval = "delta")
+ED50.ambient <- ED(model.W2.3, (summary(model.W2.3)$coefficients[4, 1] * 0.5), clevel = "ambient", type = "absolute", interval = "delta")
 
 
 # In this case, fitting relative and absolute resulted in the same ED50. Perhaps because W1.3 has a lower limit = 0. In simulations using the W1.4, then the relative and absolute ED50 are different. 
@@ -128,21 +128,21 @@ ED50.ambient <- ED(model.W1.3, (summary(model.W1.3)$coefficients[4, 1] * 0.5), c
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
 
-EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
-                     (summary(model.W1.3)$coefficients[3, 1] * 0.5)), 
+EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[4, 1] * 0.5),
+                     (summary(model.W2.3)$coefficients[3, 1] * 0.5)), 
        compMatch = c("elevated", "ambient"), type = "absolute", interval = "none", reverse = T)
 
 
 # Comparing b parameter (slope)
-compParm(model.W1.3, strVal = "b", operator = "-")
+compParm(model.W2.3, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.W1.3, strVal = "d", operator = "-")
+compParm(model.W2.3, strVal = "d", operator = "-")
 
 
 # Comparing e parameter (Infletion Point)
-compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for asymmetric models, the parameter"e" does not reflect the ED50. 
+compParm(model.W2.3, strVal = "e", operator = "-") # Remember that for asymmetric models, the parameter"e" does not reflect the ED50. 
 
 
 ```
@@ -153,16 +153,16 @@ compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for asymmetri
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2,4-D_Absolute ED/MIs_2,4-D+P450_GC_A101_ DR Biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED/MIs_2,4-D+GST_GC_A101_ DR Biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
 
 
-plot(model.W1.3,
+plot(model.W2.3,
      type = "average",
-     xlab = expression(paste("2,4-D + P450 rate (g ae ha"^-1, ")")),
+     xlab = expression(paste("2,4-D + GST rate (g ae ha"^-1, ")")),
      ylab = expression(paste("A101 biomass (g plant"^-1, ")")),
      ylim = c(0, 4),
      col = c("red", "darkgreen"),
@@ -171,15 +171,15 @@ plot(model.W1.3,
      cex.axis = 1.3,
      cex.lab = 1.9,
      cex.legend = 2.0,
-     legendPos = c(9000, 4.0),
+     legendPos = c(4000, 4.0),
      lwd = 1.5)
 
 
 
 points(x = c(ED50.elevated[1, 1],
              ED50.ambient[1, 1]),
-       y = c((summary(model.W1.3)$coefficients[3, 1]/2), 
-             (summary(model.W1.3)$coefficients[4, 1]/2)),
+       y = c((summary(model.W2.3)$coefficients[3, 1]/2), 
+             (summary(model.W2.3)$coefficients[4, 1]/2)),
        pch = 8,
        cex = 1.3)
 
